Enable all supported 1.0 device features in QVulkanWindow

[ChangeLog][QtGui][QVulkanWindow] QVulkanWindow is now enabling all
Vulkan 1.0 features reported as supported from the physical device.

Task-number: QTBUG-99803
Change-Id: Ib9cfcd449904c67b07e0e2d4ade5bcaeb4cb0ce6
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 79aad61fc1fe5295086bc27de2a3e8917649505a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>